fix wrapping on thread item

--- a/public/less/chat/ThreadItem.less
+++ b/public/less/chat/ThreadItem.less
@@ -47,10 +47,10 @@ a.conversation-item {
     }
     span.latest-message {
       color: #aaa;
-      max-height: 16px;
       overflow: hidden;
       text-align: left;
       word-break: break-all;
+      white-space: nowrap;
     }
   }
 }
